--- a/challenge8/news/templates/index.html
+++ b/challenge8/news/templates/index.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 	{% for file in datalist %}
-            {{ file }}
-            {{ loop.index }}
-            <p><a href={{ url_for('fileshow', filename=file.title) }}>{{ datalist[loop.index-1].title }}</a><p>
-                 
+            <p><a href={{ url_for('fileshow', fileid=file.id) }}>{{ file.title }}</a><p>
+            {% for tag in file.tags %}
+                <span>{{ tag }}<span>
+            {% endfor %}
 	{% endfor %}
 {% endblock %}
